fixing text overlap in blog template

--- a/src/components/Blog/Blog.module.css
+++ b/src/components/Blog/Blog.module.css
@@ -75,7 +75,6 @@
 
     .imageContainer {
         width: 100%;
-        height: 35vh;
     }
 }
 
